--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,7 @@ color: #404bbf;
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     font-weight: 500;
+    letter-spacing: 0.04em;
     font-size: 16px;
     line-height: 24px;
 }
@@ -195,7 +196,7 @@ color: #404bbf;
 
 .portfolio-descr{
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
