--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     --main-font-family: 'Roboto', sans-serif;
     --secondary-font-family: 'Raleway', sans-serif;
     --accent-color: #2E2F42; 
+    --fourth-color: #f4f4fd;
 }
 
 .list{
@@ -39,11 +40,15 @@ body{
    color: var(--accent-color);
 }
 
+.menu-contacts{
+    font-style: normal;
+}
+
 .menu-link{
     color: var(--accent-color) ;
     font-weight: 500;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
 }
 
@@ -55,7 +60,7 @@ color: #404bbf;
 .contacts-link{
     color: #434455;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
 }
 
@@ -79,13 +84,7 @@ color: #404bbf;
 
 .hero-modal-button{
     color: #fff;
-    width: 169px;
-    height: 56px;
-    left: 636px;
-    top: 428px;
     background: #4D5AE5;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -100,14 +99,14 @@ color: #404bbf;
 .studio-item-title{
     font-weight: 500;
     font-size: 20px;
-    line-height: 24px;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--accent-color);
 }
 
 .studio-descr{
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
@@ -142,14 +141,14 @@ color: #404bbf;
 .contacts-employee{
     font-weight: 500;
     font-size: 20px;
-    line-height: 24px;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--accent-color);
 }
 
 .contacts-job{
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
@@ -160,24 +159,22 @@ color: #404bbf;
 
 
 .footer-studio {
-    color: #f4f4fd;
+    color: var(--fourth-color); 
 }
 
 .footer-descr{
-    color: #fff;
+    color: var(--fourth-color);
+    line-height: 1.5;
+    letter-spacing: 0.02em
 }
 
 .portfolio-btn{
     color: #4D5AE5;
-    width: 116px;
-    height: 48px;
     background: #F4F4FD;
-    border: 1px solid #E7E9FC;
-    border-radius: 4px;
     font-weight: 500;
     letter-spacing: 0.04em;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
 }
 
 .portfolio-btn:hover,
@@ -189,7 +186,7 @@ color: #404bbf;
 .portfolio-work{
     font-weight: 500;
     font-size: 20px;
-    line-height: 24px;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--accent-color);
 }
